# fastapi-pydentity

./: LICENSE  README.md  pyproject.toml
examples/: example1.py  example2.py  example3.py  examples.db
examples/base/: depends.py  prep.py  schemes.py
examples/endpoints/: account.py  data.py
fastapi_pydentity/: __init__.py  types.py
fastapi_pydentity/authentication/: README.md  __init__.py  _dependency.py  _params.py  builder.py  dependency.py  options.py  params.py
fastapi_pydentity/authentication/bearer/: __init__.py  _handler.py  _parameters.py  _token.py  handler.py  token.py  token_parameters.py  types.py
fastapi_pydentity/authentication/cookie/: __init__.py  _handler.py  _options.py  cookie_options.py  handler.py
fastapi_pydentity/authentication/middleware/: __init__.py  _base.py
fastapi_pydentity/authorization/: README.md  __init__.py  _dependency.py  _options.py  _params.py  builder.py  dependency.py  params.py
fastapi_pydentity/http/: __init__.py  _dependency.py
fastapi_pydentity/identity/: __init__.py  _dependency.py  _options.py  _params.py  _proxy_types.py  builder.py  dependency.py  params.py
fastapi_pydentity/routers/: __init__.py  base.py  change_password.py  login.py  personal_data.py  register.py  reset_password.py  two_factor_authenticator.py  utils.py
